appId: com.jonl.memdogs
---
- launchApp

- assertVisible:
    text: Reference List
    index: 0
- assertVisible: List of breeds
- tapOn:
    point: 76%,89%
- assertVisible:
    text: Memory Test
    index: 0
- assertVisible: Guess what dog breed this is!
- tapOn:
    point: 35%,68%
- tapOn:
    point: 76%,73%
- tapOn:
    point: 24%,89%
